src/objects/Project_User__c.object
<CustomObject>
    <description>To assign users to project.</description>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to project detail</description>
        <label>Project Detail</label>
        <referenceTo>Project_Detail__c</referenceTo>
        <relationshipLabel>Project Users</relationshipLabel>
        <relationshipName>Project_Users1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <description>This Formulae Field will store user email which is assigned to the project</description>
        <formula>user__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <description>This formula field will store the first name of the user assigned to the project</description>
        <formula>user__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <description>Indicates the user is internal or external</description>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to user</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Users1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project User</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Project User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>